clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__vprintf_1.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/vprintf-1.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[6] = "hello" [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[7] = "hello\n" [cir_private, default, align 1, dso_local, constant]
global .str.2 : s8i[2] = "a" [cir_private, default, align 1, dso_local, constant]
global .str.3 : s8i[1] = zero [cir_private, default, align 1, dso_local, constant]
global .str.4 : s8i[3] = "%s" [cir_private, default, align 1, dso_local, constant]
global .str.5 : s8i[3] = "%c" [cir_private, default, align 1, dso_local, constant]
global .str.6 : s8i[4] = "%s\n" [cir_private, default, align 1, dso_local, constant]
global .str.7 : s8i[4] = "%d\n" [cir_private, default, align 1, dso_local, constant]

fn vprintf(%arg0: s8i*, %arg1: rec___va_list_tag*) -> s32i [external, c, nothrow];
fn abort() -> void [external, c, nothrow];
fn inner(%arg0: s32i, ...) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i):
        %27 = alloca s32i, "x", align 4
        %28 = alloca rec___va_list_tag[1], "ap", align 16
        %29 = alloca rec___va_list_tag[1], "ap2", align 16
        store %arg0, %27
        %30 = cast(array_to_ptrdecay) %28 : rec___va_list_tag*
        va_start %30
        %31 = cast(array_to_ptrdecay) %29 : rec___va_list_tag*
        va_start %31
        scope {
            %34 = load %27 : s32i, align 4
            switch %34 {
                case equal 0 {
                    %166 = get_global @vprintf : ((s8i*, rec___va_list_tag*) -> s32i)*
                    %167 = get_global @.str : s8i[6]*
                    %168 = cast(array_to_ptrdecay) %167 : s8i*
                    %169 = cast(array_to_ptrdecay) %28 : rec___va_list_tag*
                    %170 = call @vprintf(%168, %169) : s32i [all]
                    scope {
                        %171 = get_global @vprintf : ((s8i*, rec___va_list_tag*) -> s32i)*
                        %172 = get_global @.str : s8i[6]*
                        %173 = cast(array_to_ptrdecay) %172 : s8i*
                        %174 = cast(array_to_ptrdecay) %29 : rec___va_list_tag*
                        %175 = call @vprintf(%173, %174) : s32i [all]
                        %176 = const 5 : s32i
                        %177 = cmp ne %175, %176 : bool
                        if %177 {
                            %178 = get_global @abort : (() -> void)*
                            call @abort() [all]
                            yield
                        }
                        yield
                    }
                    break
                }
                case equal 1 {
                    %153 = get_global @vprintf : ((s8i*, rec___va_list_tag*) -> s32i)*
                    %154 = get_global @.str.1 : s8i[7]*
                    %155 = cast(array_to_ptrdecay) %154 : s8i*
                    %156 = cast(array_to_ptrdecay) %28 : rec___va_list_tag*
                    %157 = call @vprintf(%155, %156) : s32i [all]
                    scope {
                        %158 = get_global @vprintf : ((s8i*, rec___va_list_tag*) -> s32i)*
                        %159 = get_global @.str.1 : s8i[7]*
                        %160 = cast(array_to_ptrdecay) %159 : s8i*
                        %161 = cast(array_to_ptrdecay) %29 : rec___va_list_tag*
                        %162 = call @vprintf(%160, %161) : s32i [all]
                        %163 = const 6 : s32i
                        %164 = cmp ne %162, %163 : bool
                        if %164 {
                            %165 = get_global @abort : (() -> void)*
                            call @abort() [all]
                            yield
                        }
                        yield
                    }
                    break
                }
                case equal 2 {
                    %140 = get_global @vprintf : ((s8i*, rec___va_list_tag*) -> s32i)*
                    %141 = get_global @.str.2 : s8i[2]*
                    %142 = cast(array_to_ptrdecay) %141 : s8i*
                    %143 = cast(array_to_ptrdecay) %28 : rec___va_list_tag*
                    %144 = call @vprintf(%142, %143) : s32i [all]
                    scope {
                        %145 = get_global @vprintf : ((s8i*, rec___va_list_tag*) -> s32i)*
                        %146 = get_global @.str.2 : s8i[2]*
                        %147 = cast(array_to_ptrdecay) %146 : s8i*
                        %148 = cast(array_to_ptrdecay) %29 : rec___va_list_tag*
                        %149 = call @vprintf(%147, %148) : s32i [all]
                        %150 = const 1 : s32i
                        %151 = cmp ne %149, %150 : bool
                        if %151 {
                            %152 = get_global @abort : (() -> void)*
                            call @abort() [all]
                            yield
                        }
                        yield
                    }
                    break
                }
                case equal 3 {
                    %127 = get_global @vprintf : ((s8i*, rec___va_list_tag*) -> s32i)*
                    %128 = get_global @.str.3 : s8i[1]*
                    %129 = cast(array_to_ptrdecay) %128 : s8i*
                    %130 = cast(array_to_ptrdecay) %28 : rec___va_list_tag*
                    %131 = call @vprintf(%129, %130) : s32i [all]
                    scope {
                        %132 = get_global @vprintf : ((s8i*, rec___va_list_tag*) -> s32i)*
                        %133 = get_global @.str.3 : s8i[1]*
                        %134 = cast(array_to_ptrdecay) %133 : s8i*
                        %135 = cast(array_to_ptrdecay) %29 : rec___va_list_tag*
                        %136 = call @vprintf(%134, %135) : s32i [all]
                        %137 = const 0 : s32i
                        %138 = cmp ne %136, %137 : bool
                        if %138 {
                            %139 = get_global @abort : (() -> void)*
                            call @abort() [all]
                            yield
                        }
                        yield
                    }
                    break
                }
                case equal 4 {
                    %114 = get_global @vprintf : ((s8i*, rec___va_list_tag*) -> s32i)*
                    %115 = get_global @.str.4 : s8i[3]*
                    %116 = cast(array_to_ptrdecay) %115 : s8i*
                    %117 = cast(array_to_ptrdecay) %28 : rec___va_list_tag*
                    %118 = call @vprintf(%116, %117) : s32i [all]
                    scope {
                        %119 = get_global @vprintf : ((s8i*, rec___va_list_tag*) -> s32i)*
                        %120 = get_global @.str.4 : s8i[3]*
                        %121 = cast(array_to_ptrdecay) %120 : s8i*
                        %122 = cast(array_to_ptrdecay) %29 : rec___va_list_tag*
                        %123 = call @vprintf(%121, %122) : s32i [all]
                        %124 = const 5 : s32i
                        %125 = cmp ne %123, %124 : bool
                        if %125 {
                            %126 = get_global @abort : (() -> void)*
                            call @abort() [all]
                            yield
                        }
                        yield
                    }
                    break
                }
                case equal 5 {
                    %101 = get_global @vprintf : ((s8i*, rec___va_list_tag*) -> s32i)*
                    %102 = get_global @.str.4 : s8i[3]*
                    %103 = cast(array_to_ptrdecay) %102 : s8i*
                    %104 = cast(array_to_ptrdecay) %28 : rec___va_list_tag*
                    %105 = call @vprintf(%103, %104) : s32i [all]
                    scope {
                        %106 = get_global @vprintf : ((s8i*, rec___va_list_tag*) -> s32i)*
                        %107 = get_global @.str.4 : s8i[3]*
                        %108 = cast(array_to_ptrdecay) %107 : s8i*
                        %109 = cast(array_to_ptrdecay) %29 : rec___va_list_tag*
                        %110 = call @vprintf(%108, %109) : s32i [all]
                        %111 = const 6 : s32i
                        %112 = cmp ne %110, %111 : bool
                        if %112 {
                            %113 = get_global @abort : (() -> void)*
                            call @abort() [all]
                            yield
                        }
                        yield
                    }
                    break
                }
                case equal 6 {
                    %88 = get_global @vprintf : ((s8i*, rec___va_list_tag*) -> s32i)*
                    %89 = get_global @.str.4 : s8i[3]*
                    %90 = cast(array_to_ptrdecay) %89 : s8i*
                    %91 = cast(array_to_ptrdecay) %28 : rec___va_list_tag*
                    %92 = call @vprintf(%90, %91) : s32i [all]
                    scope {
                        %93 = get_global @vprintf : ((s8i*, rec___va_list_tag*) -> s32i)*
                        %94 = get_global @.str.4 : s8i[3]*
                        %95 = cast(array_to_ptrdecay) %94 : s8i*
                        %96 = cast(array_to_ptrdecay) %29 : rec___va_list_tag*
                        %97 = call @vprintf(%95, %96) : s32i [all]
                        %98 = const 1 : s32i
                        %99 = cmp ne %97, %98 : bool
                        if %99 {
                            %100 = get_global @abort : (() -> void)*
                            call @abort() [all]
                            yield
                        }
                        yield
                    }
                    break
                }
                case equal 7 {
                    %75 = get_global @vprintf : ((s8i*, rec___va_list_tag*) -> s32i)*
                    %76 = get_global @.str.4 : s8i[3]*
                    %77 = cast(array_to_ptrdecay) %76 : s8i*
                    %78 = cast(array_to_ptrdecay) %28 : rec___va_list_tag*
                    %79 = call @vprintf(%77, %78) : s32i [all]
                    scope {
                        %80 = get_global @vprintf : ((s8i*, rec___va_list_tag*) -> s32i)*
                        %81 = get_global @.str.4 : s8i[3]*
                        %82 = cast(array_to_ptrdecay) %81 : s8i*
                        %83 = cast(array_to_ptrdecay) %29 : rec___va_list_tag*
                        %84 = call @vprintf(%82, %83) : s32i [all]
                        %85 = const 0 : s32i
                        %86 = cmp ne %84, %85 : bool
                        if %86 {
                            %87 = get_global @abort : (() -> void)*
                            call @abort() [all]
                            yield
                        }
                        yield
                    }
                    break
                }
                case equal 8 {
                    %62 = get_global @vprintf : ((s8i*, rec___va_list_tag*) -> s32i)*
                    %63 = get_global @.str.5 : s8i[3]*
                    %64 = cast(array_to_ptrdecay) %63 : s8i*
                    %65 = cast(array_to_ptrdecay) %28 : rec___va_list_tag*
                    %66 = call @vprintf(%64, %65) : s32i [all]
                    scope {
                        %67 = get_global @vprintf : ((s8i*, rec___va_list_tag*) -> s32i)*
                        %68 = get_global @.str.5 : s8i[3]*
                        %69 = cast(array_to_ptrdecay) %68 : s8i*
                        %70 = cast(array_to_ptrdecay) %29 : rec___va_list_tag*
                        %71 = call @vprintf(%69, %70) : s32i [all]
                        %72 = const 1 : s32i
                        %73 = cmp ne %71, %72 : bool
                        if %73 {
                            %74 = get_global @abort : (() -> void)*
                            call @abort() [all]
                            yield
                        }
                        yield
                    }
                    break
                }
                case equal 9 {
                    %49 = get_global @vprintf : ((s8i*, rec___va_list_tag*) -> s32i)*
                    %50 = get_global @.str.6 : s8i[4]*
                    %51 = cast(array_to_ptrdecay) %50 : s8i*
                    %52 = cast(array_to_ptrdecay) %28 : rec___va_list_tag*
                    %53 = call @vprintf(%51, %52) : s32i [all]
                    scope {
                        %54 = get_global @vprintf : ((s8i*, rec___va_list_tag*) -> s32i)*
                        %55 = get_global @.str.6 : s8i[4]*
                        %56 = cast(array_to_ptrdecay) %55 : s8i*
                        %57 = cast(array_to_ptrdecay) %29 : rec___va_list_tag*
                        %58 = call @vprintf(%56, %57) : s32i [all]
                        %59 = const 7 : s32i
                        %60 = cmp ne %58, %59 : bool
                        if %60 {
                            %61 = get_global @abort : (() -> void)*
                            call @abort() [all]
                            yield
                        }
                        yield
                    }
                    break
                }
                case equal 10 {
                    %36 = get_global @vprintf : ((s8i*, rec___va_list_tag*) -> s32i)*
                    %37 = get_global @.str.7 : s8i[4]*
                    %38 = cast(array_to_ptrdecay) %37 : s8i*
                    %39 = cast(array_to_ptrdecay) %28 : rec___va_list_tag*
                    %40 = call @vprintf(%38, %39) : s32i [all]
                    scope {
                        %41 = get_global @vprintf : ((s8i*, rec___va_list_tag*) -> s32i)*
                        %42 = get_global @.str.7 : s8i[4]*
                        %43 = cast(array_to_ptrdecay) %42 : s8i*
                        %44 = cast(array_to_ptrdecay) %29 : rec___va_list_tag*
                        %45 = call @vprintf(%43, %44) : s32i [all]
                        %46 = const 2 : s32i
                        %47 = cmp ne %45, %46 : bool
                        if %47 {
                            %48 = get_global @abort : (() -> void)*
                            call @abort() [all]
                            yield
                        }
                        yield
                    }
                    break
                }
                case default {
                    %35 = get_global @abort : (() -> void)*
                    call @abort() [all]
                    yield
                }
            }
            yield
        }
        %32 = cast(array_to_ptrdecay) %28 : rec___va_list_tag*
        va_end %32
        %33 = cast(array_to_ptrdecay) %29 : rec___va_list_tag*
        va_end %33
        return
}
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    %2 = const 0 : s32i
    call @inner(%2) [all]
    %3 = const 1 : s32i
    call @inner(%3) [all]
    %4 = const 2 : s32i
    call @inner(%4) [all]
    %5 = const 3 : s32i
    call @inner(%5) [all]
    %6 = const 4 : s32i
    %7 = get_global @.str : s8i[6]*
    %8 = cast(array_to_ptrdecay) %7 : s8i*
    call @inner(%6, %8) [all]
    %9 = const 5 : s32i
    %10 = get_global @.str.1 : s8i[7]*
    %11 = cast(array_to_ptrdecay) %10 : s8i*
    call @inner(%9, %11) [all]
    %12 = const 6 : s32i
    %13 = get_global @.str.2 : s8i[2]*
    %14 = cast(array_to_ptrdecay) %13 : s8i*
    call @inner(%12, %14) [all]
    %15 = const 7 : s32i
    %16 = get_global @.str.3 : s8i[1]*
    %17 = cast(array_to_ptrdecay) %16 : s8i*
    call @inner(%15, %17) [all]
    %18 = const 8 : s32i
    %19 = const 120 : s32i
    call @inner(%18, %19) [all]
    %20 = const 9 : s32i
    %21 = get_global @.str.1 : s8i[7]*
    %22 = cast(array_to_ptrdecay) %21 : s8i*
    call @inner(%20, %22) [all]
    %23 = const 10 : s32i
    %24 = const 0 : s32i
    call @inner(%23, %24) [all]
    %25 = const 0 : s32i
    store %25, %0
    %26 = load %0 : s32i
    return %26
}
