clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__vrp_1.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/vrp-1.c" (c, x86_64-unknown-linux-gnu)
fn f(%arg2: s32i) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg2: s32i):
        %11 = alloca s32i, "a", align 4
        %12 = alloca s32i, "__retval", align 4
        store %arg2, %11
        scope {
                %15 = load %11 : s32i, align 4
                %16 = const 2 : s32i
                cmp
                if %17 {
                        %18 = load %11 : s32i, align 4
                        minus
                        store %19, %11, align 4
                        scope {
                                %22 = load %11 : s32i, align 4
                                %23 = const 2 : s32i
                                cmp
                                if %24 {
                                        %25 = const 0 : s32i
                                        store %25, %12
                                        %26 = load %12 : s32i
                                        return %26
                                }
                                yield
                        }
                        %20 = const 1 : s32i
                        store %20, %12
                        %21 = load %12 : s32i
                        return %21
                }
                yield
        }
        %13 = const 1 : s32i
        store %13, %12
        %14 = load %12 : s32i
        return %14
}
fn abort() -> void [external, c, nothrow];
fn exit(%arg0: s32i) -> void [external, c];
fn main(%arg0: s32i, %arg1: s8i**) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i, %arg1: s8i**):
        %0 = alloca s32i, "argc", align 4
        %1 = alloca s8i**, "argv", align 8
        %2 = alloca s32i, "__retval", align 4
        store %arg0, %0
        store %arg1, %1
        %3 = const 0 : s32i
        store %3, %2
        scope {
                %7 = const -2 : s32i
                %8 = call @f(%7) : s32i [all]
                %9 = cast(int_to_bool) %8 : bool
                if %9 {
                        %10 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        %4 = get_global @exit : (s32i) -> void*
        %5 = const 0 : s32i
        call @exit(%5) [all]
        %6 = load %2 : s32i
        return %6
}
