clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__vrp_2.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/vrp-2.c" (c, x86_64-unknown-linux-gnu)
fn f(%arg2: s32i) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg2: s32i):
        %11 = alloca s32i, "a", align 4
        %12 = alloca s32i, "__retval", align 4
        store %arg2, %11
        scope {
            %15 = load %11 : s32i, align 4
            %16 = const 2 : s32i
            %17 = cmp ne %15, %16 : bool
            if %17 {
                %18 = load %11 : s32i, align 4
                %19 = const 0 : s32i
                %20 = cmp gt %18, %19 : bool
                %21 = ternary %20 ? { : s32i
                    %31 = load %11 : s32i, align 4
                    yield %31
                } : {
                    %29 = load %11 : s32i, align 4
                    %30 = minus %29 : s32i [nsw]
                    yield %30
                }
                store %21, %11, align 4
                scope {
                    %24 = load %11 : s32i, align 4
                    %25 = const 2 : s32i
                    %26 = cmp eq %24, %25 : bool
                    if %26 {
                        %27 = const 0 : s32i
                        store %27, %12
                        %28 = load %12 : s32i
                        return %28
                    }
                    yield
                }
                %22 = const 1 : s32i
                store %22, %12
                %23 = load %12 : s32i
                return %23
            }
            yield
        }
        %13 = const 1 : s32i
        store %13, %12
        %14 = load %12 : s32i
        return %14
}
fn abort() -> void [external, c, nothrow];
fn exit(%arg0: s32i) -> void [external, c];
fn main(%arg0: s32i, %arg1: s8i**) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i, %arg1: s8i**):
        %0 = alloca s32i, "argc", align 4
        %1 = alloca s8i**, "argv", align 8
        %2 = alloca s32i, "__retval", align 4
        store %arg0, %0
        store %arg1, %1
        %3 = const 0 : s32i
        store %3, %2
        scope {
            %7 = const -2 : s32i
            %8 = call @f(%7) : s32i [all]
            %9 = cast(int_to_bool) %8 : bool
            if %9 {
                %10 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        %4 = get_global @exit : ((s32i) -> void)*
        %5 = const 0 : s32i
        call @exit(%5) [all]
        %6 = load %2 : s32i
        return %6
}
