clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__vrp_4.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/vrp-4.c" (c, x86_64-unknown-linux-gnu)
fn abort() -> void [external, c, nothrow];
fn test(%arg0: s32i, %arg1: s32i) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i, %arg1: s32i):
        %7 = alloca s32i, "x", align 4
        %8 = alloca s32i, "y", align 4
        %9 = alloca s32i, "c", align 4
        store %arg0, %7
        store %arg1, %8
        scope {
            %21 = load %7 : s32i, align 4
            %22 = const 1 : s32i
            %23 = cmp eq %21, %22 : bool
            if %23 {
                %24 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        scope {
            %17 = load %8 : s32i, align 4
            %18 = const 1 : s32i
            %19 = cmp eq %17, %18 : bool
            if %19 {
                %20 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        %10 = load %7 : s32i, align 4
        %11 = load %8 : s32i, align 4
        %12 = div %10, %11 : s32i
        store %12, %9, align 4
        scope {
            %13 = load %9 : s32i, align 4
            %14 = const 1 : s32i
            %15 = cmp ne %13, %14 : bool
            if %15 {
                %16 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        return
}
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    %2 = const 2 : s32i
    %3 = const 2 : s32i
    call @test(%2, %3) [all]
    %4 = get_global @exit : ((s32i) -> void)*
    %5 = const 0 : s32i
    call @exit(%5) [all]
    %6 = load %0 : s32i
    return %6
}
