clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__vrp_5.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/vrp-5.c" (c, x86_64-unknown-linux-gnu)
fn abort() -> void [external, c, nothrow];
fn test(%arg2: u32i, %arg3: u32i) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg2: u32i, %arg3: u32i):
        %11 = alloca u32i, "a", align 4
        %12 = alloca u32i, "b", align 4
        store %arg2, %11
        store %arg3, %12
        scope {
                %23 = load %11 : u32i, align 4
                %24 = const 5 : u32i
                cmp
                if %25 {
                        %26 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        scope {
                %19 = load %12 : u32i, align 4
                %20 = const 5 : u32i
                cmp
                if %21 {
                        %22 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        scope {
                %13 = load %11 : u32i, align 4
                %14 = load %12 : u32i, align 4
                %15 = add %13, %14 : u32i
                %16 = const 0 : u32i
                cmp
                if %17 {
                        %18 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        return
}
fn exit(%arg0: s32i) -> void [external, c];
fn main(%arg0: s32i, %arg1: s8i**) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i, %arg1: s8i**):
        %0 = alloca s32i, "argc", align 4
        %1 = alloca s8i**, "argv", align 8
        %2 = alloca s32i, "__retval", align 4
        %3 = alloca u32i, "x", align 4
        store %arg0, %0
        store %arg1, %1
        %4 = const 0 : s32i
        store %4, %2
        %5 = const 2147483648 : u32i
        store %5, %3, align 4
        %6 = load %3 : u32i, align 4
        %7 = load %3 : u32i, align 4
        call @test(%6, %7) [all]
        %8 = get_global @exit : (s32i) -> void*
        %9 = const 0 : s32i
        call @exit(%9) [all]
        %10 = load %2 : s32i
        return %10
}
