clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__wchar_t_1.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/wchar_t-1.c" (c, x86_64-unknown-linux-gnu)
global x : s32i[2] = ConstArray { ty: Array { element_type: Named("s32i"), size: 2 }, elts: Array([CirInt { ty: Named("s32i"), value: "196" }]), trailing_zeros_num: 1 } [external, default, align 4, dso_local]
global y : s32i = CirInt { ty: Named("s32i"), value: "196" } [external, default, align 4, dso_local]

fn abort() -> void [external, c, nothrow];
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = const 0 : s32i
        store %1, %0
        scope {
                %25 = const 8 : u64i
                %26 = const 4 : u64i
                div
                %28 = const 2 : u64i
                cmp
                if %29 {
                        %30 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        scope {
                %10 = const 0 : s64i
                %11 = get_global @x : s32i[2]*
                get_element
                %13 = load %12 : s32i, align 4
                %14 = const 196 : s32i
                cmp
                %16 = ternary %15 ? { : bool
                        %24 = const true : bool
                        yield %24
                } : {
                        %18 = const 1 : s64i
                        %19 = get_global @x : s32i[2]*
                        get_element
                        %21 = load %20 : s32i, align 4
                        %22 = const 0 : s32i
                        cmp
                        yield %23
                }
                if %16 {
                        %17 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        scope {
                %5 = get_global @y : s32i*
                %6 = load %5 : s32i, align 4
                %7 = const 196 : s32i
                cmp
                if %8 {
                        %9 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        %2 = get_global @exit : (s32i) -> void*
        %3 = const 0 : s32i
        call @exit(%3) [all]
        %4 = load %0 : s32i
        return %4
}
